--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   "dev": "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
     "next": "^16.0.7",
     "next-intl": "^4.6.1",
