--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "@vercel/analytics": "^1.6.1",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
