--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
-    "next": "^16.0.7",
+    "next": "15.4.3",
     "next-intl": "^4.6.1",
     "nodemailer": "^7.0.10",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "resend": "^6.5.2"
   },
   "devDependencies": {
