--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
-    "next": "15.4.3",
+    "next": "^15.4.4",
     "next-intl": "^4.6.1",
     "nodemailer": "^7.0.10",
     "react": "18.3.1",
